# evidence-gate

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  package.json
.claude/: settings.json
.claude/hooks/: session-start.sh
.claude/memory/: completed_features.md  pending_sessions.md
.claude/skills/: cross-port-parity.md  model-handoff.md  release-checklist.md  verify-playbook.md
.github/workflows/: test.yml
docs/: case-study-daddyinvestor.md  fable-fact-checking-kickoff.md  index.html  phase3-kickoff.md  project-plan.md  release-notes-v1.0.1.md  release-notes-v1.0.md  strategic-review-prompt.md
docs/design/: claim-verification.md  provenance.md
examples/: decision-log.mjs  provenance.mjs  rag-pipeline.mjs  tamper-evident-log.mjs  thai-rag.mjs  verified-loop.mjs
mcp/: server.mjs
python/: README.md  pyproject.toml
python/evidence_gate/: __init__.py  core.py  presets.py  verify.py
python/tests/: test_core.py
src/: core.js  index.js  presets.js  verify.js
test/: core.test.mjs  decision.test.mjs  edge.test.mjs  mcp.test.mjs  vectors.json  vectors.test.mjs  verify.test.mjs
